<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2.5dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:id="@+id/weightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:onClick="onClick"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:paddingStart="22dp"
                android:paddingEnd="0dp"
                android:text="@string/weight"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <Spinner
                android:id="@+id/weight_spinner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="22dp"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weightValues"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weight_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:gravity="end|bottom"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/sixty_numeral"
                android:textColor="@color/orange"
                android:textSize="36sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/weight_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:gravity="top|end"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/kilogram"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.5"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/heightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:onClick="onClick"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:paddingStart="22dp"
                android:paddingEnd="0dp"
                android:text="@string/height"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <Spinner
                android:id="@+id/height_spinner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="22dp"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/heightValues"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:orientation="vertical">

            <TextView
                android:id="@+id/height_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:gravity="end|bottom"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/one_seventy_numeral"
                android:textColor="@color/black"
                android:textSize="36sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/height_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:autoSizeTextType="uniform"
                android:background="@color/white"
                android:gravity="top|end"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/meter"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>